apps/argocd-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-service
  namespace: argocd
spec:
  selector:
    app: argocd-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
