apps/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd-server
